--- a/slider.css
+++ b/slider.css
@@ -69,12 +69,16 @@ html, body {
 }
 
 .slider-navigation button {
+    position: absolute;
+    bottom: 10px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: 1px solid #ecedf0;
     cursor: pointer;
     background-color: #fff;
+    transform: translateX(-50%);
+    left: 50%;
 }
 
 .slider-navigation button.disabled {
