--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    background-color: #f8f8f8;
+    background-color: #f8f8f800;
     padding: 20px;
     z-index: 2;
     transition: all 0.5s ease-in-out;
@@ -79,8 +79,16 @@ nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: #f8f8f8;
+        background-color: #f8f8f800;
         padding: 20px;
+    }
+
+    .scrolled-mini {
+        border-radius: 40px 40px 0 0 !important;
+        -webkit-border-radius: 40px 40px 0 0 !important;
+        -moz-border-radius: 40px 40px 0 0 !important;
+        -ms-border-radius: 40px 40px 0 0 !important;
+        -o-border-radius: 40px 40px 0 0 !important;
     }
 
     .burger {
@@ -101,11 +109,16 @@ nav {
         width: 100%;
         background-color: #f8f8f8;
         transition: all 0.5s ease-in-out;
-    }
+        border-radius: 0 0 40px 40px !important;
+        -webkit-border-radius: 0 0 40px 40px !important;
+        -moz-border-radius: 0 0 40px 40px !important;
+        -ms-border-radius: 0 0 40px 40px !important;
+        -o-border-radius: 0 0 40px 40px !important;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
 
     .nav-links.nav-active {
         opacity: 1;
-
         transform: translateY(0%);
     }
 
