--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Potta+One&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +8,7 @@
 
 body {
     overflow-x: hidden;
+    font-family: 'Open Sans', sans-serif !important;
 }
 
 /* nvbar */
@@ -49,16 +52,28 @@ nav {
 }
 
 .nav-links a {
+    position: relative;
     text-decoration: none;
     color: #333;
-    padding: 8px 12px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
 }
 
-.nav-links a:hover {
-    background-color: #ddd;
+.nav-links a::before {
+    content: "";
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #333;
+    transition: all 0.3s ease-in-out;
 }
+
+.nav-links a:hover::before {
+    width: 100%;
+    left: 0;
+}
+
+
 
 .burger {
     display: none;
@@ -115,7 +130,7 @@ nav {
         -ms-border-radius: 0 0 40px 40px !important;
         -o-border-radius: 0 0 40px 40px !important;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
+    }
 
     .nav-links.nav-active {
         opacity: 1;
@@ -176,4 +191,10 @@ nav {
 .desc {
     /* justify */
     text-align: justify;
+}
+
+.title {
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 20px;
 }
