--- a/responsif.css
+++ b/responsif.css
@@ -212,3 +212,16 @@
         float: none;
     }
 }
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.row>* {
+    box-sizing: border-box;
+    flex-shrink: 0;
+    max-width: 100%;
+}
