--- a/style.css
+++ b/style.css
@@ -199,35 +199,29 @@ nav {
     margin-bottom: 20px;
 }
 
+/* ---------------------------- */
+/* ! Forkafest */
+/* ---------------------------- */
 .forkafest {
-    position: absolute;
-    top: 150px !important;
     font-family: 'Lilita One', cursive;
-    font-style: normal !important ;
+    font-style: normal !important;
     font-weight: 700 !important;
-    font-size: 54px !important;
+    font-size: 70px !important;
     line-height: 65px !important;
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
     background: linear-gradient(270deg, #C5D3E9 50%, #0D47A1 100%);
     -webkit-background-clip: text;
-   -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;
     background-clip: text;
     background-size: 200%;
     color: transparent;
+    margin-bottom: 30px;
 }
 
 .countdown {
-    position: absolute;
-    top: 350px !important;
     font-family: 'Lilita One', cursive;
     font-style: normal;
     font-weight: 700;
-    font-size: 60px;
-    line-height: 65px;
-    display: flex;
-    align-items: center;
+    font-size: 50px;
     background: linear-gradient(270deg, #D2DFF2 0%, #B5C8E6 14.58%, #9BB4DB 28.12%, #7B9BCE 44.27%, #6288C4 56.77%, #507ABD 66.15%, #3C6BB4 76.04%, #0D47A1 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -237,15 +231,11 @@ nav {
 
 .jam {
     list-style: none;
-    position: absolute;
-    top: 400px;
     font-family: 'Lilita One', cursive;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 65px;
-    display: flex;
-    align-items: center;
     background: linear-gradient(270deg, #0D47A1 0%, #441066 100%, #C5D3E9 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -254,4 +244,7 @@ nav {
     margin-right: auto;
 }
 
-
+.jam li {
+    display: inline-block;
+    margin-right: 10px;
+}
