--- a/style.css
+++ b/style.css
@@ -199,6 +199,448 @@ nav {
     margin-bottom: 20px;
 }
 
+/* button */
+.cta {
+    position: relative;
+    margin: auto;
+    padding: 12px 18px;
+    transition: all 0.2s ease;
+    border: none;
+    background: none;
+}
+
+.cta:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    border-radius: 50px;
+    background: #b1dae7;
+    width: 45px;
+    height: 45px;
+    transition: all 0.3s ease;
+}
+
+.cta span {
+    position: relative;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    color: #234567;
+}
+
+.cta svg {
+    position: relative;
+    top: 0;
+    margin-left: 10px;
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke: #234567;
+    stroke-width: 2;
+    transform: translateX(-5px);
+    transition: all 0.3s ease;
+}
+
+.cta:hover:before {
+    width: 100%;
+    background: #b1dae7;
+}
+
+.cta:hover svg {
+    transform: translateX(0);
+}
+
+.cta:active {
+    transform: scale(0.95);
+}
+
+/* card */
+.inner {
+    --bg-color: #4EA5D9;
+    --bg-color-light: #9bc4db;
+    --text-color-hover: #fff;
+    --box-shadow-color: #4ea6d96c;
+}
+
+.card {
+    padding: 10px;
+    text-align: center;
+    margin: 0 auto;
+    width: 220px;
+    height: 321px;
+    background: #fff;
+    border-radius: 40px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-shadow: 0 14px 26px rgba(0, 0, 0, 0.04);
+    transition: all 0.3s ease-out;
+    text-decoration: none;
+}
+
+.card:hover {
+    transform: translateY(-5px) scale(1.005) translateZ(0);
+    box-shadow: 0 24px 36px rgba(0, 0, 0, 0.11),
+        0 24px 46px var(--box-shadow-color);
+}
+
+.card:hover .overlay {
+    transform: scale(4) translateZ(0);
+}
+
+.card:hover .circle {
+    border-color: var(--bg-color-light);
+    background: var(--bg-color);
+}
+
+.card:hover .circle:after {
+    background: var(--bg-color-light);
+}
+
+.card:hover p {
+    color: var(--text-color-hover);
+}
+
+.card p {
+    font-size: 17px;
+    color: #4c5656;
+    margin-top: 30px;
+    z-index: 3;
+    transition: color 0.3s ease-out;
+}
+
+.circle {
+    width: 131px;
+    height: 131px;
+    border-radius: 50%;
+    background: #fff;
+    border: 2px solid var(--bg-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+    transition: all 0.3s ease-out;
+}
+
+.circle:after {
+    content: "";
+    width: 118px;
+    height: 118px;
+    display: block;
+    position: absolute;
+    background: var(--bg-color);
+    border-radius: 50%;
+    top: 7px;
+    left: 7px;
+    transition: opacity 0.3s ease-out;
+}
+
+.overlay {
+    width: 118px;
+    position: absolute;
+    height: 118px;
+    border-radius: 50%;
+    background: var(--bg-color);
+    top: 70px;
+    left: 50px;
+    z-index: 0;
+    transition: transform 0.3s ease-out;
+}
+
+.f-icon {
+    font-size: 50px;
+    color: white;
+    z-index: 3;
+    transform: translateZ(0);
+}
+
+/* blob */
+.blobs-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.blob {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+}
+
+.blob svg {
+    width: 100%;
+    height: 100%;
+}
+
+.blob-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #ffffff;
+    font-size: 18px;
+}
+
+.number {
+    display: block;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.language {
+    display: block;
+}
+
+/* blob animation 1-8 */
+#bpath,
+#bpath2,
+#bpath3,
+#bpath4,
+#bpath5,
+#bpath6,
+#bpath7,
+#bpath8 {
+    fill: #4EA5D9;
+    transition: all 0.3s ease-in-out;
+}
+
+.blob:hover #bpath,
+.blob:hover #bpath2,
+.blob:hover #bpath3,
+.blob:hover #bpath4,
+.blob:hover #bpath5,
+.blob:hover #bpath6,
+.blob:hover #bpath7,
+.blob:hover #bpath8 {
+    fill: #0099ff;
+    transition: all 0.3s ease-in-out;
+}
+
+
+@media screen and (max-width: 768px) {
+    .blobs-container {
+        gap: initial;
+    }
+
+    .blob {
+        width: 150px;
+        height: 150px;
+        margin: 0;
+    }
+
+    .number {
+        font-size: 18px;
+    }
+
+    .language {
+        font-size: 14px;
+    }
+}
+
+/* gallery */
+.row-c {
+    margin: 5px;
+    position: relative;
+}
+
+#gallery {
+    display: grid;
+    grid-template: repeat(3, 1fr)/repeat(6, 1fr);
+    grid-gap: 0.5em;
+}
+
+@media (max-width: 800px) {
+    #gallery {
+        display: flex;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #gallery>div {
+        width: 46%;
+        margin: 1%;
+    }
+}
+
+@media (max-width: 800px) and (max-width: 350px) {
+    #gallery>div {
+        width: 98%;
+    }
+}
+
+#gallery>div:nth-child(6n+1) {
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+#gallery>div:nth-child(2) {
+    grid-column: span 3;
+    grid-row: span 3;
+}
+
+#gallery>div:nth-child(4) {
+    grid-column: span 1;
+    grid-row: span 2;
+}
+
+#gallery>div>a {
+    opacity: 0;
+    position: absolute;
+    color: #000;
+    background-color: #000;
+    font: bold 4em "Helvetica";
+    text-shadow: 0 -1px 5px #fff, -1px 0px 5px #fff, 0 1px 5px #fff, 1px 0px 5px #fff;
+    padding: 2rem;
+    mix-blend-mode: difference;
+    width: 100%;
+    height: 100%;
+    transition: all ease 1s;
+}
+
+#gallery>div>img {
+    width: 100%;
+    min-height: 100%;
+    transition: all ease 1s;
+    object-fit: cover;
+}
+
+#gallery>div:hover img {
+    filter: blur(8px);
+}
+
+#gallery>div:hover a {
+    opacity: 1;
+}
+
+#gallery>div {
+    overflow: hidden;
+    position: relative;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#gallery div,
+#gallery a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+[id^=lightbox-] {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    opacity: 0;
+    transition: opacity 450ms ease-in-out;
+    align-items: center;
+    justify-content: center;
+    pointer-events: none;
+}
+
+[id^=lightbox-]:target {
+    opacity: 1;
+    pointer-events: inherit;
+}
+
+[id^=lightbox-]:target img {
+    filter: blur(0);
+}
+
+[id^=lightbox-] .content {
+    max-width: 90%;
+    position: relative;
+    color: #fff;
+}
+
+[id^=lightbox-] .content:hover>a.close {
+    opacity: 1;
+    transform: scale(1, 1);
+}
+
+[id^=lightbox-] .content:hover>.title {
+    opacity: 1;
+    transform: translateY(-3px);
+}
+
+[id^=lightbox-] .content:hover>.title::after {
+    opacity: 1;
+}
+
+[id^=lightbox-] .content>* {
+    transition: all 450ms ease-in-out;
+}
+
+[id^=lightbox-] .title {
+    display: block;
+    margin: 0;
+    padding: 1em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    transform: translateY(50%);
+    font-size: 1.5em;
+    opacity: 0;
+}
+
+[id^=lightbox-] .title::after {
+    content: " ";
+    background-color: rgba(0, 0, 0, 0.4);
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transition: all 350ms ease-in-out 250ms;
+    opacity: 0;
+    transform-origin: bottom;
+    mix-blend-mode: soft-light;
+}
+
+[id^=lightbox-] img {
+    max-height: 80vh;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    filter: blur(50px);
+}
+
+[id^=lightbox-] a.close {
+    width: 2em;
+    height: 2em;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(0, 0);
+    opacity: 0;
+    transform-origin: right top;
+    text-decoration: none;
+    color: #fff;
+}
+
+[id^=lightbox-] a.close::after {
+    content: "X";
+}
+
 /* ---------------------------- */
 /* ! Forkafest */
 /* ---------------------------- */
@@ -214,6 +656,13 @@ nav {
     background-clip: text;
     background-size: 200%;
     color: transparent;
+    margin-bottom: 30px;
+}
+
+.forkafest-sub {
+    font-family: cursive;
+    font-size: 25px !important;
+    font-weight: 400;
     margin-bottom: 30px;
 }
 
