fixed slider etc

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav {
 .nav-links a {
     position: relative;
     text-decoration: none;
-    color: #333;
+    color: #ffffff;
 }
 
 .nav-links a::before {
@@ -75,7 +75,6 @@ nav {
 }
 
 
-
 .burger {
     display: none;
     flex-direction: column;
@@ -90,6 +89,15 @@ nav {
     transition: all 0.5s ease-in-out;
 }
 
+.scrolled-nav {
+    opacity: 1;
+    color: #000 !important;
+    transition: all 0.5s ease-in-out !important;
+    -webkit-transition: all 0.5s ease-in-out !important;
+    -moz-transition: all 0.5s ease-in-out !important;
+    -ms-transition: all 0.5s ease-in-out !important;
+    -o-transition: all 0.5s ease-in-out !important;
+}
 @media screen and (max-width: 768px) {
     nav {
         display: flex;
