--- a/slider.css
+++ b/slider.css
@@ -38,7 +38,7 @@ html, body {
     height: 100%;
 }
 
-.slider-content figure img {
+.slider-content figure img, .slider-content figure .content {
     object-fit: cover;
     background-position: center center;
     background-size: cover;
@@ -46,12 +46,10 @@ html, body {
     transform-origin: center;
     transition-duration: .5s;
     transition-property: transform, opacity;
-    transform: scale(1.3);
     opacity: 0;
 }
 
-.slider-content figure.show img {
-    transform: scale(1);
+.slider-content figure.show img, .slider-content figure.show .content {
     background-position: center center;
     opacity: 1;
 }
@@ -79,6 +77,11 @@ html, body {
     background-color: #fff;
     transform: translateX(-50%);
     left: 50%;
+    z-index: 5;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .slider-navigation button.disabled {
