--- a/style.css
+++ b/style.css
@@ -112,8 +112,9 @@ nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: #f8f8f800;
+        background-color: #f8f8f8;
         padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .scrolled-mini {
@@ -130,6 +131,7 @@ nav {
     }
 
     .nav-links {
+        margin-top: -5px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -147,7 +149,7 @@ nav {
         -moz-border-radius: 0 0 40px 40px !important;
         -ms-border-radius: 0 0 40px 40px !important;
         -o-border-radius: 0 0 40px 40px !important;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        box-shadow:  2px 10px 10px rgba(0, 0, 0, 0.2);
     }
 
     .nav-links.nav-active {
