--- a/style.css
+++ b/style.css
@@ -112,12 +112,12 @@ nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: #f8f8f8;
+        background-color: #f8f8f800;
         padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
 
     .scrolled-mini {
+        background-color: #f8f8f8 !important;
         border-radius: 40px 40px 0 0 !important;
         -webkit-border-radius: 40px 40px 0 0 !important;
         -moz-border-radius: 40px 40px 0 0 !important;
