--- a/style.css
+++ b/style.css
@@ -965,15 +965,14 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Lilita One', cursive;
     font-style: normal !important;
     font-weight: 700 !important;
-    font-size: 70px !important;
-    line-height: 65px !important;
+    font-size: 100px;
     background: linear-gradient(270deg, #f1f6fd 50%, #104EAD 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
     background-size: 200%;
     color: transparent;
-    margin-bottom: 30px;
+    padding: 30px 0;
 }
 
 .forkafest-sub {
@@ -1014,7 +1013,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 800px) {
-
+    .forkafest {
+        font-size: 70px;
+    }
     .time .angka {
         font-size: 30px;
         line-height: 45px;
