--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav {
     left: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: #f8f8f800;
     padding: 20px;
