--- a/style.css
+++ b/style.css
@@ -67,8 +67,12 @@ nav {
     left: 0;
     width: 0;
     height: 2px;
-    background-color: #333;
+    background-color: #FFB703;
     transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
 }
 
 .nav-links a:hover::before {
@@ -408,6 +412,32 @@ h1, h2, h3, h4, h5, h6 {
 
 .cta:active {
     transform: scale(0.95);
+}
+
+/* footer  */
+.icon {
+    display: flex;
+    align-items: center;
+}
+
+.icon i {
+    margin-right: 15px;
+}
+
+.alamat i {
+    margin-right: 20px;
+}
+
+.sosmed {
+    margin: 20px 0;
+}
+
+.sosmed a {
+
+    color: #f8f8f8;
+    border-radius: 50%;
+    background-color: #033E50;
+    padding: 10px 13px 10px 13px;
 }
 
 /* card */
@@ -1586,6 +1616,7 @@ input[type="radio"]:checked~.option {
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
 }
+
 .score-modal-container {
     display: none;
     position: fixed;
