--- a/style.css
+++ b/style.css
@@ -283,6 +283,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (max-width: 768px) {
+    .hide-md {
+        display: none;
+    }
     .title {
         font-size: 50px;
         font-weight: 700;
